# pkg/models/forms/inputForms/InputForms.go
@@ -1,0 +1,5 @@
+package inputForms
+
+type ClientIdInput struct {
+	ClientId uint
+}
